--- a/index.html
+++ b/index.html
@@ -1,11 +1,462 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Smartlink</title>
+	</head>
+	<body>
+		<!DOCTYPE html>
+		<html lang="en">
+			<head>
+				<meta charset="UTF-8" />
+				<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+				<title>
+					Smartlink | OneStrong - Link Management for Fitness Professionals
+				</title>
+				<link
+					rel="stylesheet"
+					href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+				/>
+				<link
+					href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@700;800&display=swap"
+					rel="stylesheet"
+				/>
+				<link rel="stylesheet" href="styles/home.css" />
+			</head>
+			<body>
+				<!-- Header -->
+				<header>
+					<div class="container">
+						<nav class="navbar">
+							<img src="images/logo.png" alt="logo" class="logo" />
+							<ul class="nav-links">
+								<li><a href="#">Features</a></li>
+								<li><a href="#">How It Works</a></li>
+								<li><a href="#">Pricing</a></li>
+								<li><a href="#">Testimonials</a></li>
+								<li><a href="#">Resources</a></li>
+							</ul>
+							<div class="nav-buttons">
+								<a href="#" class="btn btn-outline">Sign In</a>
+								<a href="#" class="btn btn-primary">Get Started</a>
+							</div>
+						</nav>
+					</div>
+				</header>
+
+				<!-- Hero Section -->
+				<section class="hero">
+					<div class="container">
+						<div class="hero-content">
+							<div class="hero-text">
+								<h1>Simplify Your <span>Fitness Links</span> in One Place</h1>
+								<p>
+									GoLink by OneStrong is the all-in-one solution for fitness
+									professionals to manage, share, and track all their important
+									links with a single customizable URL.
+								</p>
+								<div class="hero-buttons">
+									<a href="#" class="btn btn-primary">Create Your Link Free</a>
+									<a href="#" class="btn btn-outline">Watch Demo</a>
+								</div>
+								<div
+									style="
+										margin-top: 30px;
+										display: flex;
+										align-items: center;
+										gap: 15px;
+									"
+								>
+									<div style="display: flex">
+										<div
+											style="
+												width: 40px;
+												height: 40px;
+												border-radius: 50%;
+												background: #e2e8f0;
+												display: flex;
+												align-items: center;
+												justify-content: center;
+												border: 2px solid white;
+												margin-right: -15px;
+												z-index: 1;
+											"
+										>
+											<i class="fas fa-user" style="color: #64748b"></i>
+										</div>
+										<div
+											style="
+												width: 40px;
+												height: 40px;
+												border-radius: 50%;
+												background: #e2e8f0;
+												display: flex;
+												align-items: center;
+												justify-content: center;
+												border: 2px solid white;
+												margin-right: -15px;
+												z-index: 2;
+											"
+										>
+											<i class="fas fa-user" style="color: #64748b"></i>
+										</div>
+										<div
+											style="
+												width: 40px;
+												height: 40px;
+												border-radius: 50%;
+												background: #e2e8f0;
+												display: flex;
+												align-items: center;
+												justify-content: center;
+												border: 2px solid white;
+												z-index: 3;
+											"
+										>
+											<i class="fas fa-user" style="color: #64748b"></i>
+										</div>
+									</div>
+									<p style="font-size: 16px; color: var(--gray)">
+										Join 15,000+ fitness professionals
+									</p>
+								</div>
+							</div>
+							<div class="hero-image">
+								<div class="shape shape-1"></div>
+								<div class="shape shape-2"></div>
+								<div class="phone-mockup">
+									<img
+										src="https://images.unsplash.com/photo-1611162617474-5b21e879e113?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=700&w=400"
+										alt="GoLink Mobile App"
+									/>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<!-- Features Section -->
+				<section class="section">
+					<div class="container">
+						<div class="section-header">
+							<h2>Powerful Features for Fitness Professionals</h2>
+							<p>
+								Everything you need to streamline your online presence and grow
+								your fitness business
+							</p>
+						</div>
+						<div class="features-grid">
+							<div class="feature-card">
+								<div class="feature-icon">
+									<i class="fas fa-layer-group"></i>
+								</div>
+								<h3>Link Management</h3>
+								<p>
+									Organize all your important links in one place - training
+									programs, social media, booking pages, and more.
+								</p>
+							</div>
+
+							<div class="feature-card">
+								<div class="feature-icon">
+									<i class="fas fa-chart-line"></i>
+								</div>
+								<h3>Analytics Dashboard</h3>
+								<p>
+									Track clicks, engagement, and conversion rates to understand
+									what resonates with your audience.
+								</p>
+							</div>
+
+							<div class="feature-card">
+								<div class="feature-icon">
+									<i class="fas fa-palette"></i>
+								</div>
+								<h3>Custom Branding</h3>
+								<p>
+									Personalize your link page with your brand colors, logo, and
+									images to maintain consistency.
+								</p>
+							</div>
+
+							<div class="feature-card">
+								<div class="feature-icon">
+									<i class="fas fa-calendar-check"></i>
+								</div>
+								<h3>Scheduling Integration</h3>
+								<p>
+									Connect directly with popular booking systems to streamline
+									client appointments.
+								</p>
+							</div>
+
+							<div class="feature-card">
+								<div class="feature-icon">
+									<i class="fas fa-video"></i>
+								</div>
+								<h3>Video Integration</h3>
+								<p>
+									Embed workout videos and tutorials directly on your link page
+									for easy access.
+								</p>
+							</div>
+
+							<div class="feature-card">
+								<div class="feature-icon">
+									<i class="fas fa-mobile-alt"></i>
+								</div>
+								<h3>Mobile Optimized</h3>
+								<p>
+									Your link page looks perfect on any device - clients can
+									access your content anywhere.
+								</p>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<!-- How It Works -->
+				<section class="section how-it-works">
+					<div class="container">
+						<div class="section-header">
+							<h2>How GoLink Works</h2>
+							<p>
+								Set up your personalized link hub in just three simple steps
+							</p>
+						</div>
+						<div class="steps">
+							<div class="step">
+								<div class="step-number">1</div>
+								<h3>Create Your Account</h3>
+								<p>Sign up for free and set up your personalized GoLink URL</p>
+							</div>
+
+							<div class="step">
+								<div class="step-number">2</div>
+								<h3>Add Your Content</h3>
+								<p>Organize your links, videos, and resources in one place</p>
+							</div>
+
+							<div class="step">
+								<div class="step-number">3</div>
+								<h3>Share & Track</h3>
+								<p>Share your single link everywhere and monitor engagement</p>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<!-- Testimonials -->
+				<section class="section">
+					<div class="container">
+						<div class="section-header">
+							<h2>Trusted by Fitness Professionals</h2>
+							<p>See how GoLink is transforming fitness businesses worldwide</p>
+						</div>
+						<div class="testimonials-grid">
+							<div class="testimonial-card">
+								<div class="testimonial-header">
+									<div class="testimonial-avatar">
+										<img
+											src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=200&w=200"
+											alt="Sarah Johnson"
+										/>
+									</div>
+									<div class="testimonial-info">
+										<h4>Sarah Johnson</h4>
+										<p>Personal Trainer</p>
+									</div>
+								</div>
+								<div class="rating">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+								</div>
+								<p>
+									"GoLink has completely transformed how I share resources with
+									my clients. Instead of sending multiple links, I just give
+									them my GoLink URL. My client engagement has increased by 40%
+									since I started using it!"
+								</p>
+							</div>
+
+							<div class="testimonial-card">
+								<div class="testimonial-header">
+									<div class="testimonial-avatar">
+										<img
+											src="https://images.unsplash.com/photo-1560250097-0b93528c311a?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=200&w=200"
+											alt="Michael Chen"
+										/>
+									</div>
+									<div class="testimonial-info">
+										<h4>Michael Chen</h4>
+										<p>Gym Owner</p>
+									</div>
+								</div>
+								<div class="rating">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star-half-alt"></i>
+								</div>
+								<p>
+									"The analytics feature alone is worth it. I can see which
+									programs my clients are most interested in and tailor my
+									offerings accordingly. It's like having a business consultant
+									built into my link management."
+								</p>
+							</div>
+
+							<div class="testimonial-card">
+								<div class="testimonial-header">
+									<div class="testimonial-avatar">
+										<img
+											src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=200&w=200"
+											alt="Emily Rodriguez"
+										/>
+									</div>
+									<div class="testimonial-info">
+										<h4>Emily Rodriguez</h4>
+										<p>Yoga Instructor</p>
+									</div>
+								</div>
+								<div class="rating">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+								</div>
+								<p>
+									"As a yoga instructor with online classes, GoLink has
+									simplified how I share resources. My students love having
+									everything in one place - class schedules, meditation guides,
+									and payment links. It's been a game-changer!"
+								</p>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<!-- CTA Section -->
+				<section class="cta">
+					<div class="container">
+						<h2>Ready to Simplify Your Fitness Business?</h2>
+						<p>
+							Join thousands of fitness professionals who are using GoLink to
+							grow their business and engage clients
+						</p>
+						<div class="cta-buttons">
+							<a href="#" class="btn btn-white">Get Started Free</a>
+							<a
+								href="#"
+								class="btn btn-outline"
+								style="
+									background: rgba(255, 255, 255, 0.1);
+									color: white;
+									border-color: white;
+								"
+								>Schedule a Demo</a
+							>
+						</div>
+					</div>
+				</section>
+
+				<!-- Footer -->
+				<footer>
+					<div class="container">
+						<div class="footer-grid">
+							<div class="footer-col footer-about">
+								<a
+									href="#"
+									class="logo"
+									style="color: white; margin-bottom: 20px; display: block"
+								>
+									<i class="fas fa-link"></i>
+									<span>GoLink</span>
+								</a>
+								<p>
+									The all-in-one link management platform designed specifically
+									for fitness professionals. Simplify, organize, and grow.
+								</p>
+								<div class="social-links">
+									<a href="#"><i class="fab fa-twitter"></i></a>
+									<a href="#"><i class="fab fa-facebook-f"></i></a>
+									<a href="#"><i class="fab fa-instagram"></i></a>
+									<a href="#"><i class="fab fa-linkedin-in"></i></a>
+									<a href="#"><i class="fab fa-youtube"></i></a>
+								</div>
+							</div>
+
+							<div class="footer-col">
+								<h4>Product</h4>
+								<ul class="footer-links">
+									<li><a href="#">Features</a></li>
+									<li><a href="#">Pricing</a></li>
+									<li><a href="#">Integrations</a></li>
+									<li><a href="#">Roadmap</a></li>
+									<li><a href="#">Changelog</a></li>
+								</ul>
+							</div>
+
+							<div class="footer-col">
+								<h4>Resources</h4>
+								<ul class="footer-links">
+									<li><a href="#">Blog</a></li>
+									<li><a href="#">Tutorials</a></li>
+									<li><a href="#">Help Center</a></li>
+									<li><a href="#">API Documentation</a></li>
+									<li><a href="#">Community</a></li>
+								</ul>
+							</div>
+
+							<div class="footer-col">
+								<h4>Company</h4>
+								<ul class="footer-links">
+									<li><a href="#">About Us</a></li>
+									<li><a href="#">Careers</a></li>
+									<li><a href="#">Contact</a></li>
+									<li><a href="#">Partners</a></li>
+									<li><a href="#">Legal</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="copyright">
+							<p>
+								&copy; 2023 GoLink by OneStrong. All rights reserved. | Privacy
+								Policy | Terms of Service
+							</p>
+						</div>
+					</div>
+				</footer>
+
+				<script>
+					// Form submission handler
+					document.querySelectorAll('.btn-primary').forEach((button) => {
+						button.addEventListener('click', function (e) {
+							e.preventDefault();
+							alert('Redirecting to sign up page...');
+						});
+					});
+
+					// Animation for feature cards
+					const featureCards = document.querySelectorAll('.feature-card');
+					featureCards.forEach((card, index) => {
+						card.style.transitionDelay = `${index * 0.1}s`;
+					});
+
+					// Animation for testimonial cards
+					const testimonialCards =
+						document.querySelectorAll('.testimonial-card');
+					testimonialCards.forEach((card, index) => {
+						card.style.transitionDelay = `${index * 0.1}s`;
+					});
+				</script>
+			</body>
+		</html>
+	</body>
 </html>
