--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 				<meta charset="UTF-8" />
 				<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 				<title>
-					Smartlink | OneStrong - Link Management for Fitness Professionals
+					SmartLink Services Inc | High-Speed Internet Provider | Reliable
+					Broadband
 				</title>
 				<link
 					rel="stylesheet"
@@ -223,6 +224,22 @@
 
 								<button class="btn btn-primary btnStart">GET STARTED</button>
 							</div>
+						</div>
+					</section>
+
+					<!-- 	section 3 -->
+					<section id="section3">
+						<div class="image">
+							<img src="images/tv1.png" alt="tv" width="540px"/>
+						</div>
+						<div class="sec3div">
+							<h3>Discover the Best in Internet Connectivity</h3>
+							<p>
+								Experience lightning-fast speeds and reliable coverage. Stay
+								connected with seamless browsing, streaming, gaming, and more —
+								designed to keep you online without interruptions, anytime,
+								anywhere.
+							</p>
 						</div>
 					</section>
 				</main>
