--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
 									</div>
 								</div>
 
+								<!-- 	line height -->
+								<div class="line"></div>
+
 								<div class="price-section">
 									<p class="price">GH₵ 15 <span class="per">/DAY</span></p>
 								</div>
@@ -174,6 +177,9 @@
 										<p>10 Mbps</p>
 									</div>
 								</div>
+
+								<!-- 	line height -->
+								<div class="line"></div>
 
 								<div class="price-section">
 									<p class="price">GH₵ 75 <span class="per">/WEEK</span></p>
@@ -218,6 +224,9 @@
 									</div>
 								</div>
 
+								<!-- 	line height -->
+								<div class="line"></div>
+
 								<div class="price-section">
 									<p class="price">GH₵ 250 <span class="per">/MONTH</span></p>
 								</div>
@@ -230,16 +239,34 @@
 					<!-- 	section 3 -->
 					<section id="section3">
 						<div class="image">
-							<img src="images/tv1.png" alt="tv" width="540px"/>
+							<img src="images/tv1.png" alt="tv" width="540px" />
 						</div>
 						<div class="sec3div">
 							<h3>Discover the Best in Internet Connectivity</h3>
 							<p>
 								Experience lightning-fast speeds and reliable coverage. Stay
-								connected with seamless browsing, streaming, gaming, and more —
+								connected with seamless browsing, streaming, gaming, and more -
 								designed to keep you online without interruptions, anytime,
 								anywhere.
 							</p>
+						</div>
+					</section>
+
+					<section id="section4">
+						<div class="sec4div">
+							<h3>Providing you with fast, reliable Internet.</h3>
+							<p>
+								Whether you're streaming, gaming, working remotely, or browsing,
+								our high-speed network ensures seamless performance. Stay
+								connected with consistent uptime, strong coverage, and
+								dependable speeds - built to keep you ahead online.
+							</p>
+							<div class="nav-buttons">
+								<a href="#" class="btn btn-primary m-btn">Get Started</a>
+							</div>
+						</div>
+						<div class="image">
+							<img src="images/guy.png" alt="tv" width="540px" />
 						</div>
 					</section>
 				</main>
