--- a/index.html
+++ b/index.html
@@ -269,6 +269,20 @@
 							<img src="images/guy.png" alt="tv" width="540px" />
 						</div>
 					</section>
+
+					<!-- 	section 5 -->
+					<section id="section5">
+						<div class="container5">
+							<h3>Call us today to get started</h3>
+							<p>
+								Haven't found what you're looking for? Save time experts for
+								exclusive deals - we answer calls
+							</p>
+							<div class="nav-buttons">
+								<a href="#" class="btn btn-primary">Request a sales call</a>
+							</div>
+						</div>
+					</section>
 				</main>
 			</body>
 		</html>
